# Garioth

./: .gitignore  CMakeLists.txt  Goriath.manifest
assets/legal/: privacy.txt  tos.txt
include/: miniaudio.h
src/client/: client.cpp
src/common/: audio_manager.cpp  audio_manager.h  bcrypt_utils.h  directory_utils.cpp  directory_utils.h  http.cpp  http.h  image_utils.cpp  image_utils.h  json_reader.cpp  json_reader.h  loadenv.h  logger.h  miniaudio_impl.cpp  screenshot.cpp  screenshot.h
src/login/: login.cpp
src/server/: server.cpp
